# danish-speech-eval

./: LICENSE  README.md  pyproject.toml
,github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
,github/instructions/: python.instructions.md
danish_speech/: __init__.py  data.py  evaluate.py  metrics.py  run.py  submit.py  types.py  utils.py
danish_speech/leaderboards/: README.md  index.html
tests/: todo.py
