[project]
name = "danish-speech-eval"
version = "0.0.0"
description = "A bench for evaluating speech to text and text to speech model on different Danish datasets and domains."
readme = "README.md"
authors = [
    {name = "Thor Steen Larsen"},
]
maintainers = [
    {name = "Thor Steen Larsen"},
]
requires-python = ">=3.11,<=3.13.12"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=3.6.0,<4.0.0",
    "httpx>=0.27.0",
    "huggingface_hub>=0.25.0",
    "jiwer>=4.0.0",
    "joblib>=1.5.1",
    "librosa>=0.11.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "progress>=1.6.1",
    "pycountry>=24.6.1",
    "pyctcdecode>=0.5.0",
    "pydub>=0.25.1",
    "pysubs2>=1.8.0",
    "requests>=2.32.4",
    "soundfile>=0.13.1",
    "torch-audiomentations>=0.12.0",
    "torchaudio>=2.6.0,<2.7.0",  # Upper bound for compatibility with audiomentations
    "tqdm>=4.66.0",
    "transformers>=4.54.1",
]

[project.scripts]
danish-speech-eval = "danish_speech.run:main"

[project.urls]
Repository = "https://github.com/Dansk-Data-Science-Community/danish-speech-eval"
Issues = "https://github.com/Dansk-Data-Science-Community/danish-speech-eval/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "readme-coverage-badger>=0.1.2",
    "click>=8.1.7",
    "ruff>=0.7.1",
    "nbstripout>=0.7.1",
    "coverage>=5.5",
    "lxml>=6.1.0",
    "pip>=26.1",
    "setuptools>=75.6.0",
    "pyrefly>=0.45.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
extend-include = [
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
preview = true
select = [
    # isort (imports)
    "I",
    # Docstrings
    "D",
    "DOC",
    # pycodestyle errors and warnings (PEP8)
    "E",
    "W",
    # flake-annotations (type hints)
    "ANN",
    # Pyflakes
    "F",
]
ignore = [
    # Type annotations for "self" arguments
    "ANN101",
    # Type annotations for "cls" arguments
    "ANN102",
    # Type annotations for *args
    "ANN002",
    # Type annotations for **kwargs
    "ANN003",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/main.py" = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyrefly.errors]
missing-import = false
missing-attribute = false
not-iterable = false
no-matching-overload = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    '--durations=10',
    '--color=yes',
    '--doctest-modules',
    '--cov=src/coral',
    '-vvv',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
]
log_cli_level = "info"
testpaths = [
    "tests"
]

